--- a/exercicios/exerc022/fundo006.html
+++ b/exercicios/exerc022/fundo006.html
@@ -8,11 +8,22 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shorthand - background
+
+                color > image > position > repeat > [size] > attachment
+
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+
         }
         main {
             background-color: white;
@@ -26,9 +37,12 @@
 </head>
 <body>
     <main>
-        <h1>Como Mudar o </h1>
+        <h1>Como Mudar o Tamanho da Imagem</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, omnis recusandae. Reiciendis officiis voluptatum dolore fugit minima quisquam placeat dicta beatae ab aliquam. Obcaecati eaque reprehenderit natus quos, dicta fugit?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia voluptatem harum voluptas, adipisci sequi quisquam tenetur blanditiis ut dolores libero, vero architecto recusandae quibusdam exercitationem inventore rerum commodi cum! Sit?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, atque? Quisquam, odio aut ullam, animi distinctio architecto explicabo cumque tempore nihil perferendis vero adipisci laudantium, quod harum consequatur quas aperiam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dolores a dolor, odio itaque, commodi ipsum corrupti voluptate distinctio et quod fugiat quisquam quas optio temporibus nemo necessitatibus debitis deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quam voluptatibus nisi ullam maxime unde ipsum enim modi atque voluptates placeat eligendi excepturi sapiente cum, hic maiores cupiditate iusto earum?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In maiores illo sed! Ducimus magnam consectetur quis, ea corrupti atque iste, facere qui officiis eligendi fugiat unde, hic rerum eveniet eius. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, vero. Quidem aliquid quo vitae nam ipsum, architecto ducimus adipisci! Illum impedit voluptas vel deleniti ad sed molestiae sit nulla earum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni dolorem, sint odio expedita quaerat quidem officia? Suscipit placeat tenetur nulla praesentium non dolorem quaerat, asperiores, at vel assumenda id amet.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur animi voluptate, minima possimus amet architecto earum non similique itaque recusandae sunt commodi cum veritatis, placeat ratione, nostrum praesentium porro dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt laboriosam, repellat provident labore, reiciendis accusamus illum nostrum porro ea, voluptatum consectetur? Modi sequi maxime aliquam id laboriosam totam voluptas odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloremque totam animi! Et asperiores incidunt molestias iste magnam veritatis, ratione natus illo eligendi architecto provident repudiandae amet deserunt? Mollitia, obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, laborum tenetur commodi soluta nisi obcaecati nesciunt voluptatem fugiat accusamus, maiores, modi nobis? Nam eos laudantium id iste voluptates ipsam voluptatum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo aliquid illum laboriosam voluptatum mollitia in saepe facilis vero alias, ipsum, maxime fugit corporis accusantium iure libero fugiat dicta odit. Voluptatum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique voluptate error tempore autem, nobis veritatis necessitatibus laudantium ducimus consequuntur reiciendis deleniti a esse aut ipsam? Corporis impedit quam quod excepturi. lorem</p>
     </main>
 </body>
 </html>
