--- a/exercicios/exerc023/tabela003.html
+++ b/exercicios/exerc023/tabela003.html
@@ -8,10 +8,19 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+         }
+
+        h1 {
+            text-align: center;
+            font-size: 1.5em;
+            padding: 20px;
+            font-variant: small-caps;
         }
+
         table {
             border-collapse: collapse;
             width: 300px;
+            margin: auto;
         }
         td {
             border: 1px solid black;
@@ -22,28 +31,28 @@
 </head>
 <body>
     
-    <h1>MESCLAGEM DE CÉLULAS EM TABELAS</h1>
+    <h1>Mesclagem De Células Em Tabelas</h1>
 
     <table>
         <tr>
             <td>A</td>
-            <td>B</td>
-            <td>C</td>
+            <td colspan="2">B</td>
+            <!-- <td>C</td> -->
         </tr>
         <tr>
-            <td>D</td>
+            <td rowspan="3">D</td>
             <td>E</td>
-            <td>F</td>
+            <td rowspan="2">F</td>
         </tr>
         <tr>
-            <td>G</td>
+            <!-- <td>G</td> -->
             <td>H</td>
-            <td>I</td>
+            <!-- <td>I</td> -->
         </tr>
         <tr>
-            <td>J</td>
-            <td>L</td>
-            <td>M</td>
+            <!-- <td>J</td> -->
+            <!-- <td>L</td> -->
+            <td colspan="2">M</td>
         </tr>
     </table>
 </body>
