--- a/desafios/des014/tabelagr.html
+++ b/desafios/des014/tabelagr.html
@@ -64,19 +64,16 @@
         <caption>Notas por Disciplina</caption>
         <thead>
             <tr>
-                <th scope="col">Área</th>
-                <th scope="col">Disciplinas</th>
+                <th rowspan="2" scope="row">Área</th>
+                <th rowspan="2" scope="row">Disciplinas</th>
                 <th colspan="2" scope="col">Notas</th>
-                <th scope="col">Média</th>
+                <th rowspan="2" scope="row">Média</th>
                 
             </tr>
 
             <tr> 
-                <th colspan="2" scope="col"></th>
-                
                 <th scope="col">Nota 1</th>
                 <th scope="col">Nota 2</th>
-                <th></th>
             </tr>
 
         </thead>
