--- a/exercicios/exerc024/iframe001.html
+++ b/exercicios/exerc024/iframe001.html
@@ -30,12 +30,25 @@
 </head>
 <body>
     <h1>Usando iframes de sites externos</h1>
-    <p>O site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px" scolling="auto"></iframe> é muito interessante!</p>
+
+    <!-- 
+        O tamanho padrão de um iframe é de 300px width e 150px de height.
+     -->
+    
+    <p>O site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px" scolling="auto">
+
+        <a href="https://www.cursoemvideo.com" target="_blank">Curso em vídeo</a>
+
+        <!-- 
+            Colocamos um <a> link para assegurar que o conteúdo possa ser visto, caso o navegador ou dipositivo não aceite o uso de iframe.
+         -->
+
+    </iframe> é muito interessante!</p>
 
     <p>O repositório do Guanabara <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe> é muito legal!</p>
 
     <p>Alguns sites podem NÃO PERMITIR serem exibidos em um iframe. Como por exemplo o site do Google. Veja abaixo:</p>
 
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="1"></iframe> também é muito legal. Mas NÃO funciona dentro de um iframe por questões de segurança.</p>
+    <p>O site do <iframe src="https://www.google.com.br" frameborder="1"></iframe> também é muito legal. Mas NÃO funciona dentro de um iframe, porque  alguns sites têm uma proteção para que seu conteúdo não seja exibido em sites de terceiros, por questões de segurança.</p>
 </body>
 </html>
