atualizei exercício 024 sobre iframe

--- a/exercicios/exerc024/iframe002.html
+++ b/exercicios/exerc024/iframe002.html
@@ -30,11 +30,15 @@
     <section>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam culpa nisi, laboriosam quos commodi obcaecati! Voluptatem adipisci cumque, aspernatur molestias accusamus error modi nihil? A ipsum eveniet eius voluptas alias? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem a, enim eligendi quod ullam autem molestias nihil consequatur architecto nisi quasi. Alias culpa quod voluptatibus doloribus, nihil sed corrupti minima.</p>
 
-        <iframe src="pag002.html" frameborder="0" width="500" height="500"></iframe>
+        <iframe src="paginas-extras/pag002.html" frameborder="0" width="500" height="500">
+
+            <p>Infelizmente seu navegador não é compatível para mostrar esse iframe.</p>
+
+        </iframe>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus dicta cumque tenetur voluptates autem saepe ratione aperiam, modi placeat quod enim, possimus, culpa esse unde. Sint, animi? Rerum, ex veritatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quos itaque neque, ducimus minima asperiores officia ullam laborum magnam dolores dolorum eum quas amet suscipit, hic, enim voluptatibus. Illum, quod?</p>
 
-        <iframe src="pag001.html" frameborder="0" width="500" height="500"></iframe>
+        <iframe src="paginas-extras/pag001.html" frameborder="0" width="500" height="500"></iframe>
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium quas velit non, officiis ipsa quos dolorum error ullam culpa quis delectus harum natus totam aspernatur. Repudiandae ad officiis nemo debitis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum inventore vitae cumque consequuntur est neque laborum similique ad nesciunt amet voluptatum velit aliquam officiis doloremque nemo quasi error, asperiores possimus!</p>
 
