atualizei exercício 024 sobre iframe

--- a/exercicios/exerc024/paginas-extras/pag002.html
+++ b/exercicios/exerc024/paginas-extras/pag002.html
@@ -21,6 +21,7 @@
             font-weight: bolder;
             font-size: 1.3em;
             padding: 20px;
+            /* background-color: lightgrey; */
         }
         table {
             border-collapse: collapse;
@@ -29,9 +30,11 @@
             border: 1px solid black;
             padding: 10px;
         }
-        tbody > tr:nth-child(even) {
-            background-color: lightgrey;
+        tbody > tr:nth-child(odd) {
+            background-color: white;
+
         }
+        
         div#container {
             overflow-x: auto;
         }
