atualizei exercício 024 sobre iframes

--- a/exercicios/exerc024/iframe003.html
+++ b/exercicios/exerc024/iframe003.html
@@ -30,7 +30,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, sapiente similique! Eos, fuga, explicabo, possimus doloremque itaque quibusdam atque magni eius ipsum minus soluta. Odio, beatae! Repellat magnam unde facere! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto accusantium eum totam incidunt nulla expedita illo sequi, voluptas veritatis cupiditate doloremque facilis consequatur sunt. Beatae blanditiis eos suscipit debitis quas! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit vero laudantium repudiandae velit quisquam quos itaque dicta optio facilis. Perspiciatis earum maiores officia ex accusantium modi aperiam repellendus totam ullam.</p>
 
-    <iframe id="tela" name="frame" src=""> 
+    <iframe id="tela" name="frame" srcdoc="<img src='imagens/cursoemvideo.png'>"> 
         <p>Infelizmente não foi possível abrir.</p>
     </iframe>
 
