--- a/exercicios/exerc025/form2.html
+++ b/exercicios/exerc025/form2.html
@@ -13,13 +13,14 @@
 </head>
 <body>
     <h1>Criando Caixas de Texto e de Senha</h1>
-    <form action="cadastro.php" method="post" autocomplete="off">
-        <p><label for="inome">Nome:</label>
-            <input type="text" name="nome" id="inome">
+    <form action="cadastro.php" method="post" autocomplete="on">
+        <p>
+            <label for="iusu">Usuário:</label>
+            <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="10" placeholder="nome do usuário" autocomplete="username">
         </p>
-        <p><label for="isenha">Senha</label>
-            <input type="password" name="senha" id="isenha">
-
+        <p>
+            <label for="isenha">Senha</label>
+            <input type="password" name="senha" id="isenha" required minlength="8" maxlength="15" size="8" placeholder="mín 8 letras" autocomplete="current-password">
         </p>
         <p>
             <input type="submit" value="Enviar">
